[package]
name = "silk8"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "silk8"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "silk8_web"
path = "src/main_web.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.13.0"
getrandom = { version = "0.2", features = ["js"] }
lazy_static = "1.4.0"
log = "0.4"
rand = { version = "0.8.5" }
rfd = "0.14.1"
rodio = { version = "0.17.3", features = ["wasm-bindgen"] }
web-time = "1.1.0"
winit = { version = "0.29.15", features = ["rwh_05"] }
winit_input_helper = "0.16.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
muda = "0.13.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "HtmlCanvasElement",
  'CanvasRenderingContext2d',
]}